Implement fluid interaction of fabric storage.